--- a/src/styles/components/_play.css
+++ b/src/styles/components/_play.css
@@ -32,12 +32,15 @@
     top: -4px;
 }
 
+.main-quiz-component-img{
+    display: flex;
+}
+
 .questionTitle{
     /*font-size: 1.2rem;
     line-height: 1.5;
     text-align: center;
     width:100%;*/
-    
     width: 100%;
     float: left;
     padding: 5px;
@@ -56,27 +59,92 @@
     padding: 0px;
 }
 
+.question-container-img{
+    /*text-align: center;
+    justify-content: center;
+    align-content: center;
+    margin-bottom: 1rem auto;
+    display: inline-flex;
+    width: 100%;*/
+    width: 50%;
+    padding: 0px;
+}
+
 .quizTitle{
     text-align: center;
     margin: auto;
 }
 
+.main-option-container-img{
+    width:50%;
+}
+
 .options-container{
+    display: flex;
+    width: 100%;
+    text-align: center;
+}
+
+.option{
+    background-color: #77c9d4;
+    /*border-radius: 15%;*/
+    border-radius: 25px;
+    color: black;
+    font-weight: bold;
+    cursor: pointer;
+    margin: 1rem auto;
+    padding: 1rem;
+    transition: 0.3s linear all;
+    text-align: center;
+    justify-content: center;    
+    width: 45%;
+}
+
+.option-img{
+    background-color: #77c9d4;
+    /*border-radius: 15%;*/
+    border-radius: 25px;
+    color: black;
+    font-weight: bold;
+    cursor: pointer;
+    margin: 1rem auto;
+    padding: 1rem;
+    transition: 0.3s linear all;
+    text-align: center;
+    justify-content: center;    
+    width: 100%;
+}
+
+.options-container-hor{
     display: inline-block;
     width: 50%;
-   text-align: center;  
+    text-align: center;  
+}
+
+.options-container-img{
+    display: block;
+    width: 100%;
+    text-align: center;
 }
 
 .img-container{
     /*text-align: left;
     width: 20%;*/
 
-    width: 30%;
-    float: left;
-    padding: 5px;
+    width: 80%;
+    max-width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.option {
+.question-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.option-hor {
     background-color: #77c9d4;
     /*border-radius: 15%;*/
     border-radius: 25px;
